--- a/index.html
+++ b/index.html
@@ -43,19 +43,26 @@
   <div class="library">
 
     <div class="option">
-<div class="lib_option" > 
+<div class="lib_option nav_option " > 
       <img src="library_icon.png" alt="library">
       <a href="#">Your Library</a>
-
-      <div class="icon" style="justify-content: space-between">
+   </div>
+      <div class="icons" >
         <i class="fa-solid fa-plus"></i>
         <i class="fa-solid fa-arrow-right"></i>
+      
+
+    </div>
+    </div>
+
+    <div class="lib-box">
+      <div class="box">
+        <div class="box-p1"></div>
+        <div class="box-p2"></div>
+        <button class="badge">badge</button>
       </div>
-
     </div>
-    </div>
-
-    <div class="boxes"></div>
+    
   </div>
 
 
